Adicion de estilos

--- a/Ingreso.html
+++ b/Ingreso.html
@@ -16,13 +16,15 @@
         <div class="row">
             <div class="col">
                 <form action="procesar.html" method="post">
-                    <h1>BIENVENIDO AL COLEGIO PADRE DAMIAN</h1>
+                    <center>
+                        <h1 style="color: blue;">BIENVENIDO AL COLEGIO "PADRE DAMIAN"</h1>
+                    </center>
                     <div class="form-group">
-                        <label for="">Usuario:</label>
+                        <h5><label for="">Usuario:</label></h5>
                         <input type="text" name="nombre_completo" id="" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="">Contraseña:</label>
+                        <h5><label for="">Contraseña:</label></h5>
                         <input type="text" name="nombre_completo" id="" class="form-control">
                     </div>
                     <div class="form-group">
