Adicion de estilos

--- a/Registro.html
+++ b/Registro.html
@@ -15,23 +15,23 @@
     <div class="container">
 
         <div class="row">
-            <div class="col">
+            <div  class="col">
                 <form action="procesar.html" method="post">
-                    <h1>REGISTRO DE ALUMNO</h1>
+                    <h1 style="color:blue;">REGISTRO DE ALUMNO</h1>
                     <div class="form-group">
-                        <label for="">Nombres:</label>
+                        <h5><label for="">Nombres:</label></h5>
                         <input type="text" name="nombre_completo" id="" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="">Apellidos:</label>
+                        <h5><label for="">Apellidos:</label></h5>
                         <input type="text" name="nombre_completo" id="" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="">Correo Electronico:</label>
+                        <h5><label for="">Correo Electronico:</label></h5>
                         <input type="text" name="nombre_completo" id="" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="">Nivel de Estudio del Alumno:</label>
+                        <h5><label for="">Nivel de Estudio del Alumno:</label></h5>
                         <select name="motivo" id="" class="form-control">
                             <option value="Inicial">Inicial</option>
                             <option value="Primaria">Primaria</option>
@@ -39,7 +39,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="">Mensaje:</label>
+                        <h5><label for="">Comentarios:</label></h5>
                         <textarea name="mensaje" id="" cols="30" rows="10" class="form-control"></textarea>
                     </div>
                     <div class="form-group">
