--- a/Ingreso.html
+++ b/Ingreso.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <h5><label for="">Contraseña:</label></h5>
-                        <input type="text" name="nombre_completo" id="" class="form-control">
+                        <input type="password" name="nombre_completo" id="" class="form-control">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary">Ingresar</button>
