Actualizacion del nombre

--- a/Ingreso.html
+++ b/Ingreso.html
@@ -17,7 +17,7 @@
             <div class="col">
                 <form action="procesar.html" method="post">
                     <center>
-                        <h1 style="color: blue;">BIENVENIDO AL COLEGIO "PADRE DAMIAN"</h1>
+                        <h1 style="color: blue;">BIENVENIDO AL COLEGIO "SAN FRANCISCO"</h1>
                     </center>
                     <div class="form-group">
                         <h5><label for="">Usuario:</label></h5>
@@ -31,7 +31,6 @@
                         <button class="btn btn-primary">Ingresar</button>
                     </div>
                 </form>
-
             </div>
             <div class="col"></div>
         </div>
